--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -39,7 +39,7 @@
             <nav class="hidden md:flex space-x-8 text-gray-700">
                 <a href="/" class="font-medium hover:text-blue-500 transition-colors">Inicio</a>
                 <a href="/clients/" class="font-medium hover:text-blue-500 transition-colors">Clientes</a>
-                <a href="/check-bin/" class="font-medium hover:text-blue-500 transition-colors">Información de cuentas</a>
+                <a href="/check-bin/" class="font-medium hover:text-blue-500 transition-colors">cuentas</a>
                 <a href="/educacion/" class="font-medium hover:text-blue-500 transition-colors relative">
                     Educación Financiera
                     <ul class="absolute hidden group-hover:block bg-white shadow-lg mt-2 py-2 w-48 text-gray-600 text-sm rounded-md">
@@ -47,7 +47,7 @@
                         <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Submenú 2</a></li>
                     </ul>
                 </a>
-                <a href="/tramites/" class="font-medium hover:text-blue-500 transition-colors">Trámites digitales</a>
+                <a href="/loans/" class="font-medium hover:text-blue-500 transition-colors">Prestamos</a>
             </nav>
     
             <!-- Botón de acción -->
